# Test_3FFT_model

./: .gitignore  .mcp.json  CLAUDE.md  README.md  UpDatePip.py  classify_demo.py  demo_body_motion.py  demo_body_motion_jammers.py  demo_body_motion_multi.py  demo_body_motion_panel.py  demo_body_motion_square.py  demo_body_motion_volume.py  demo_cfar.py  demo_generators.py  demo_interactive.py  demo_nuller.py  demo_snr.py  demo_tokenizer.py  edge_scenes_demo.py  list_runs.py  main.py  pyproject.toml  train_cnn.py
.claude/: settings.json
.claude/hooks/: on_stop.sh  post_write.sh  pre_bash.sh
Doc/: README.md  anti_barrage_intro.md  anti_barrage_math.md  classes.md  edge_scenes.md  folders.md  snr_usage.md
MemoryBank/: MASTER_INDEX.md
common/: __init__.py  gpu_configs.py  gpu_context.py  result.py  runner.py
core/: __init__.py  controller.py
demo/: README.md  __init__.py  run_all.py
graphify-out/: graph.json  manifest.json
tests/: __init__.py  all_test.py  test_anti_barrage_pipeline.py  test_aperture_ixj.py  test_arbiter.py  test_body_motion.py  test_body_motion_jammers.py  test_body_motion_multi.py  test_body_motion_volume.py  test_calibration.py  test_camera.py  test_cfar.py  test_clustering.py  test_generators.py  test_graphics.py  test_integration.py  test_mvdr.py  test_nuller.py  test_peak_refine.py  test_raw_queue.py  test_roi_gate.py  test_run_workspace.py  test_runtime.py  test_smoke.py  test_snr.py  test_targeting.py  test_tokenizer.py  test_tracking.py  test_waveform_to_cube.py
web/: app.js  codec.js  index.html  msgpack.js  panel_mockup.html
(+356 files in other folders)
